# tt-project

./: .gitignore  README.md  battleship.proto  game.proto  main.tex  pyproject.toml
doc/: main.tex
src/battleship/: RSA.py  __init__.py  battleship_pb2.py  client.py  client_tcp.py  cross_circle.py  crypto.py  exceptions.py  main.py  padding_OAEP.py  protocol.py  server_tcp.py  types.py
src/client/: main.py
src/client/tests/: test_.py
src/game/: RSA.py  RSAConn.py  __init__.py  circleCross.py  client.py  clientTCP.py  clientTest.py  client_tcp.py  crypto.py  game.py  game_pb2.py  gui.py  keyExchange.py  main.py  padding_OAEP.py  protocol.py  server.py  serverTCP.py  server_tcp.py  types.py
src/security/: RSA.py
src/server/: main.py
src/server/tests/: test.py
tests/battleship/: test_model.py  test_protocol.py  test_rsa.py
tests/game/: test_circleCross.py  test_protocol.py  test_rsa.py
