[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
requires-python = ">= 3.12"
version = "0.1.0"
name = "battleship"

[project.scripts]
battleshipd = "server:main"
battleship = "client:main"

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.mypy]
files = "src"
check_untyped_defs = true
