[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.12"
version = "0.1.0"
name = "battleship"
dependencies = ["sympy"]

[project.scripts]
battleshipd = "battleship:server"
battleship = "battleship:client"

[project.optional-dependencies]
dev = ["pytest", "mypy", "protobuf"]

[tool.mypy]
files = "src"
check_untyped_defs = true
