[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.0"
version = "0.1.0"
name = "game"
dependencies = ["sympy", "protobuf", "pygame"]

[project.scripts]
gamed = "game:server"
game = "game:main"


[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.mypy]
files = "src"
check_untyped_defs = true
